--- a/templates/component/services.html.twig
+++ b/templates/component/services.html.twig
@@ -1,9 +1,9 @@
-<div class="container">
-		<div class="row w-50 mx-auto py-5">
-			<div class="col-4 col-lg-12">
-				<img src="https://spathailuxe.com/wp-content/uploads/2019/01/spa_thai_luxe_Paris_12-15.jpg" class="rounded mx-auto" alt="Thai massage">
+<div class="container hstack gap-5">
+		<div class="row mx-auto py-5">
+			<div class="col-4 mt-3">
+				<img class="w-100 h-50" src="https://spathailuxe.com/wp-content/uploads/2019/01/spa_thai_luxe_Paris_12-15.jpg" class="rounded mx-auto" alt="Thai massage">
 				<p class="py-4 fw-bold fs-5">
-					Thai massage is a form of therapeutic touch that differs in many ways from traditional massage. Instead of a massage table, you lie on a mat on the floor while the provider manipulates your body in certain ways to stimulate organs and improve flexibility. Thai massage is part of traditional Thai medicine.
+					{{ 'Thai massage is a form of therapeutic touch that differs in many ways from traditional massage. Instead of a massage table, you lie on a mat on the floor while the provider manipulates your body in certain ways to stimulate organs and improve flexibility.'|u.truncate(150, '...') }}
 				</p>
                 <p><span>30 min 90€ , 60 min 160€</span></p>
 				<button class="btn btn-outline-primary mb-5" href="#" role="button">
@@ -11,10 +11,10 @@
 				</button>
 
 			</div>
-			<div class="col-4 col-lg-12 rounded float-middle">
-				<img src="https://beautyinsider.sg/wp-content/uploads/2021/03/shutterstock_291214463.jpg" alt="Japanese massage">
+			<div class="col-4 mt-3">
+				<img class="w-100 h-50" src="https://beautyinsider.sg/wp-content/uploads/2021/03/shutterstock_291214463.jpg" alt="Japanese massage">
 				<p class="py-4 fw-bold fs-5">
-					Using a combination of kneading, tapping, pulling and pressure, practitioners target the legs, back, arms and neck. Japanese Massage aims to bring about relaxation and healing not just with the physical body, but also on an emotional and spiritual level.
+					{{ 'Using a combination of kneading, tapping, pulling and pressure, practitioners target the legs, back, arms and neck. Japanese Massage aims to bring about relaxation and healing not just with the physical body, but also on an emotional and spiritual level.'|u.truncate(150, '...') }}
 				</p>
                 <p><span>30 min 90€ , 60 min 160€</span></p>
 				<button class="btn btn-outline-primary mb-5" href="#" role="button">
@@ -22,10 +22,11 @@
 				</button>
 
 			</div>
-			<div class="col-4 col-lg-12 rounded float-end ">
-				<img src="https://www.swissotel.com/assets/0/92/2119/3338/3377/4725/6442451810/100589e6-f304-400a-a460-3d5ecbbd234b.jpg" alt="chinese massage">
+			<div class="col-4 mt-3">
+				<img class="w-100 h-50" src="https://www.swissotel.com/assets/0/92/2119/3338/3377/4725/6442451810/100589e6-f304-400a-a460-3d5ecbbd234b.jpg" alt="chinese massage">
 				<p class="py-4 fw-bold fs-5">
-					Tui Na, also known as Chinese massage, is an ancient practice that aims to release the flow of energy around the body. Lots of skilfull techniques are used to bounce you back to good health, including kneading, rolling and deep pressure that's applied to precise points on your body.
+					
+					{{ 'Tui Na, also known as Chinese massage, is an ancient practice that aims to release the flow of energy around the body. Lots of skilfull techniques are used to bounce you back to good health, including kneading, rolling and deep pressure that applied to precise points on your body.'|u.truncate(150, '...') }}
 				</p>
                 <p><span>30 min 90€ , 60 min 160€</span></p>
 				<button class="btn btn-outline-primary mb-5" href="#" role="button">
@@ -34,21 +35,21 @@
 
 
 			</div>
-			<div class="col-4 col-lg-12">
-				<img src="https://precious-spa.com/images/pages/Arabic-Massage-dubai-near-carrefour.jpg" alt="Arabian Massage massage">
+			<div class="col-4 mt-3">
+				<img class="w-100 h-50" src="https://precious-spa.com/images/pages/Arabic-Massage-dubai-near-carrefour.jpg" alt="Arabian Massage massage">
 				<p class="py-4 fw-bold fs-5">
-					Tui Na, also known as Chinese massage, is an ancient practice that aims to release the flow of energy around the body. Lots of skilfull techniques are used to bounce you back to good health, including kneading, rolling and deep pressure that's applied to precise points on your body.</p>
+					{{ 'Tui Na, also known as Chinese massage, is an ancient practice that aims to release the flow of energy around the body. Lots of skilfull techniques are used to bounce you back to good health, including kneading, rolling and deep pressure thats applied to precise points on your body.'|u.truncate(150, '...') }}</p>
                     <p><span>30 min 90€ , 60 min 160€</span></p>
 				<button class="btn btn-outline-primary mb-5" href="#" role="button">
 					Book now
 				</button>
 			</div>
-			<div class="col-4 col-lg-12">
-				<img src="https://choicenutrition.ca/uploads/3/4/7/1/34710207/massage-therapy_5_orig.jpg" alt="French massage">
+			<div class="col-4 mt-3">
+				<img class="w-100 h-50" src="https://choicenutrition.ca/uploads/3/4/7/1/34710207/massage-therapy_5_orig.jpg" alt="French massage">
 				<p class="py-4 fw-bold fs-5">
-					The French massage one of the types of relaxing stress relieving massage, performed by special techniques. This is an effective method for relieving stress and, in particular, calms headaches from overwork, frustration.
+					{{ 'The French massage one of the types of relaxing stress relieving massage, performed by special techniques. This is an effective method for relieving stress and, in particular, calms headaches from overwork, frustration.
 					                    
-					Growing based on influence principles on reflexogenic zones, it is very useful at a mental and physical overstrain, depression, a syndrome of chronic weariness.
+					Growing based on influence principles on reflexogenic zones, it is very useful at a mental and physical overstrain, depression, a syndrome of chronic weariness.'|u.truncate(150, '...') }}
 				</p>
                 <p><span>30 min 90€ , 60 min 160€</span></p>
 				<button class="btn btn-outline-primary mb-5" href="#" role="button">
@@ -56,10 +57,10 @@
 				</button>
 
 			</div>
-			<div class="col-4 col-lg-12">
-				<img src="https://2jjk8wjsh3n66prxu6h27okz-wpengine.netdna-ssl.com/wp-content/uploads/2019/09/05222018-75-1-750x500.jpg" alt="American bones break massage">
-				<p class="py-4 fw-bold fs-5">
-					American Bonus Break is a type of massage focusing on stimulating the natural drainage of the lympth nodes, in order to eliminate waste and toxins from the body
+			<div class="col-4 mt-3">
+				<img class="w-100 h-50" src="https://2jjk8wjsh3n66prxu6h27okz-wpengine.netdna-ssl.com/wp-content/uploads/2019/09/05222018-75-1-750x500.jpg" alt="American bones break massage">
+				<p class="py-4 fw-bold fs-5" >
+					{{ 'American Bonus Break is a type of massage focusing on stimulating the natural drainage of the lympth nodes, in order to eliminate waste and toxins from the body'|u.truncate(150, '...') }}
 				</p>
                 <p><span>30 min 90€ , 60 min 160€</span></p>
 				<button class="btn btn-outline-primary mb-5" href="#" role="button">
