--- a/templates/component/contact.html.twig
+++ b/templates/component/contact.html.twig
@@ -1,4 +1,4 @@
-
+{# This file can be deleted #}
 	<div class="container">
 		<div class="row mx-auto py-5 d-flex align-items-center justify-content-space-between ">
 			<div class="col-6 text-start fs-5">
