--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,15 +13,11 @@
 {{ include('component/aboutUs.html.twig')}}
 {{ include('component/services.html.twig')}}
 {{ include('component/_equipe.html.twig') }}
-{{ include('component/contact.html.twig')}}
+{# {{ include('component/contact.html.twig')}} #}
 
+{# <div class="text-center mt-5">
 
-
-
-
-<div class="text-center mt-5">
-
-</div>
+</div> #}
 
 {{ include('component/_footer.html.twig') }}
 
