--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,7 @@ body {
     font-family: var(--title-font);
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
 .navbar {
@@ -61,6 +62,7 @@ body {
 .equipe-img {
   object-fit: fill;
   height: 30vh;
+}
 
 
 .summary{
@@ -92,7 +94,19 @@ body {
     transition: 0.5s;
 }
 .btn-card:hover{
-    background: var(--grey-btn);
+    background: var(--grey-btn); 
     transition: 0.5s;
-
 }
+
+/* footer */
+ footer .contact-us, .hours {
+    text-transform: uppercase;
+    color: var(--gris-sombre);
+  }
+
+  .adress, .social {
+    font-size: 1.2rem;
+  }
+
+
+
