--- a/templates/component/_equipe.html.twig
+++ b/templates/component/_equipe.html.twig
@@ -1,3 +1,4 @@
+<div class="container">
 <section class="equipe mt-5">
     <div class="container-fluid">
 
@@ -23,3 +24,4 @@
     </div>
 
 </section>
+</div>
