--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-lg fixed-top">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" href="#">logo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,6 +20,8 @@
     </div>
   </div>
 </nav>
+
+
 
 
 
