--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,12 +12,10 @@
 {{ include('component/_intro.html.twig') }}
 {{ include('component/aboutUs.html.twig')}}
 {{ include('component/services.html.twig')}}
-{{ include('component/_equipe.html.twig') }}
-{# {{ include('component/contact.html.twig')}} #}
 
-{# <div class="text-center mt-5">
-
-</div> #}
+{{ render(controller(
+    'App\\Controller\\MassagistController::index'
+)) }}
 
 {{ include('component/_footer.html.twig') }}
 
