--- a/templates/component/_intro.html.twig
+++ b/templates/component/_intro.html.twig
@@ -1,3 +1,7 @@
+
 <div class="intro">
-<h1 class="text-center">spa</h1>
+    <div class="intro-text">
+        <h1>Find Yourself Here</h1>
+        <button>book now</button>
+    </div>
 </div>
