--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -28,4 +28,12 @@
 --blue-dark: #011627;
 --white-animation: #fdfffc;
 
+
+font-family: 'Raleway', sans-serif;
+font-family: 'Source Sans Pro', sans-serif;
+
+ font-family: 'Averia Serif Libre', cursive; 
+
+ font-family: 'Libre Baskerville', serif;
+font-family: 'Source Sans Pro', sans-serif;
 }
