--- a/templates/component/_footer.html.twig
+++ b/templates/component/_footer.html.twig
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row mx-auto py-4 d-flex align-items-top justify-content-space-between ">
 				<div class="col-6 text-start fs-5">
-					<h3 class="mb-5 contact-us ">contactez-nous</h3>
+					<h3 class="mb-5 contact-us ">Contactez-nous</h3>
 
 					<p class="adress">82 Rue Victor Hugo , 71000 Mâcon</p>
 					<p class="adress">+33 6 01 02 03</p>
@@ -32,7 +32,7 @@
 
 				<div class="col-6 text-end f-5">
 
-					<h3 class="mb-5 hours">horaires d'ouverture</h3>
+					<h3 class="mb-5 hours">Horaires d'ouverture</h3>
 					<p>
 						Lundi 09:00 - 21:00
 					</p>
