--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,14 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@300;400;700&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
     
     /* --sonic-silver: #72727eff;
     --gris-sombre: #625f63ff; */
-    --title-font: 'Raleway', sans-serif;
-
+    --title-font: 'Libre Baskerville', serif;
+    --text-font: 'Source Sans Pro', sans-serif;
+   
     /* --cyan-process: #00b6eaff;
   
     --red-ryb: #fe251eff;
@@ -32,7 +34,7 @@
 }
 
 body {
-    font-family: var(--title-font);
+    font-family: var(--text-font);
     margin: 0;
     padding: 0;
     font-size: 16px;
@@ -44,7 +46,7 @@ body {
 }
 
 .navigation a {
-    font-family: var(--title-font);
+    font-family: var(--text-font);
     color: var(--text-color);
     text-transform: uppercase;
 }
@@ -59,8 +61,7 @@ body {
     background-image: url(../images/69.jpg);
     height: 70vh;
     width: 100%;
-    margin: 100px auto 0;
-    text-transform: uppercase;  
+    margin: 100px auto 0;    
     background-size: cover; 
     /* background-size: contain;
     background-repeat: no-repeat; */
@@ -70,32 +71,52 @@ body {
 .intro-text h1 {
    
     color: var(--text-color);
+    font-family: var(--title-font);
     position: absolute;
     top: 30%;
-    left: 100px;
+    left: 15rem;
     width: 10%;
-    font-size: 5rem;
+    font-size: 4rem;
+    line-height: 1.2;
+    z-index: 1;
 }
 
 .intro-text button {
     color: var(--text-color);
     position: absolute;
-    top: 80%;
-    left: 100px;
-    width: 15%;
-    border: solid 0.1rem  var(--text-color);
-    padding: 16px ;
+    top: 75%;
+    left: 15rem;
+    border: solid 0.2em  var(--text-color);
+    padding: 16px 80px ;
     background-color: var(--white);
-    font-family: var(--title-font);
+    font-family: var(--text-font);
+    font-weight: 700;
+    font-size: 1rem;
     text-transform: uppercase;
-    transition: 0.5s;
+    transition-delay: 1.1s;   
+    z-index: 1;
 }
 
 .intro-text button:hover {
     color: var(--white);
     background-color: var(--text-color);
-    transition: 0.5s;
-    
+    transition: 0.5s;    
+}
+
+.intro-window {
+    /* background-color: var(--sky-blue-crayola);  */
+    background-image: url(../images/water.jpg);
+    background-size: cover; 
+    width: 65%;
+    height: 75%;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top: 15%;
+    z-index: 0;
 }
 
 /* Equipe */
@@ -141,12 +162,14 @@ body {
 
 /* footer */
  footer .contact-us, .hours {
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
+    font-family: var(--title-font);
     color: var(--text-color);
   }
 
   .adress, .social {
     font-size: 1.2rem;
+    font-family: var(--text-font);
   }
 
 
