--- a/templates/component/_intro.html.twig
+++ b/templates/component/_intro.html.twig
@@ -2,6 +2,9 @@
 <div class="intro">
     <div class="intro-text">
         <h1>Find Yourself Here</h1>
+         {# <h1>Se Retrouver Ici</h1> #}
         <button>book now</button>
+    </div>
+    <div class="intro-window">
     </div>
 </div>
