--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,6 @@
     --ruby-red: #a31621ff;
     --grey: #7f7b82ff;
     --raisin-black: #191923ff;
-
 }
 
 body {
@@ -27,11 +26,29 @@ body {
     padding: 0;
     font-size: 16px;
     background-color: var(--white);
+    color: var(--text-color);
+}
+
+p {
+    font-size: 1.5rem;
+    line-height: 1.4;
+    font-weight: 300;
 }
 
 .section-title {
     font-size: 3rem;
     font-family: var(--title-font);
+    padding: 5rem 0 3rem;
+}
+
+.title {
+    font-size: 1.5rem;
+    font-family: var(--title-font);
+}
+
+.details {
+    font-size: 1.4rem;  
+    color: var(--grey)  ;
 }
 
 /* Navigation Bar */
@@ -85,6 +102,7 @@ body {
     font-size: 1rem;
     text-transform: uppercase;
     transition-delay: 1.1s;   
+    text-decoration: none;
    }
 
 .btn-design:hover {
@@ -115,13 +133,29 @@ body {
     z-index: 0;
 }
 
+/* About */
+.about {
+    margin-top: 7rem;
+    height: 70vh;
+}
 
+/* Massages / Services */
+.massages, .team {
+    padding-bottom: 10rem;
+}
 
 /* Team */
-.equipe-img {
+.team-img {
   object-fit: fill;
   height: 30vh;
 }
+
+.team {
+    background-image: url(../images/69.jpg);
+    background-size: cover; 
+}
+
+/* Reservations */
 
 .summary{
     width: 400px;
@@ -159,18 +193,22 @@ body {
 
 /* footer */
 footer {
-    background-color: var(--text-color) !important;
+    background-color: var(--text-color);
 }
 
-footer .contact-us, .hours {
-font-family: var(--title-font);
-color: var(--white);
-
+footer .contact-us, .hours{
+    font-family: var(--title-font);
+    color: var(--white);
 }
 
 .adress, .social {
-font-size: 1.2rem;
-font-family: var(--white) !important;
+    font-size: 1.2rem;
+    color: var(--white) ;
+}
+
+.hours-time {
+    color: var(--white);
+    font-size: 1.1rem;
 }
 
 
