--- a/templates/component/aboutUs.html.twig
+++ b/templates/component/aboutUs.html.twig
@@ -1,7 +1,9 @@
-<div class="container">
-		<h1 class="w-50 mx-auto py-5">WHY CHOOSE US</h1>
-		<p class="fs-4">Welcome to one of most relaxing salons, where our trained therapists offer you peace and tranquility. Come in and relax to soothing music as our therapists provide the perfect treatment. Our massage is specially designed to help people achieve the perfect mind-body harmony. Let Grand Central Bodywork be your oasis from the urban metropolis of Paris.</p>
+<section class="about">
+	<div class="container">
+			<h2 class="section-title">Why Choose Us</h2>
+			<p>Welcome to one of most relaxing salons, where our trained therapists offer you peace and tranquility. Come in and relax to soothing music as our therapists provide the perfect treatment. Our massage is specially designed to help people achieve the perfect mind-body harmony. Let Grand Central Bodywork be your oasis from the urban metropolis of Paris.</p>
 	</div>
+</section>
 
 
 
