update bdd, update ReservationController

--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="{{asset('css/style.css')}}">
 {% endblock %}
 
+{% block javascripts %}
+    {{parent()}}
+    <script src="{{asset('js/reservation.js')}}" defer></script> 
+{% endblock %} 
 
 {% block body %}
     <div class="container mt-5">
@@ -17,13 +21,10 @@
                     {#  nav-bar #}
                     <h1>Rendez-vous de Massage à WF3-Massage</h1>
                     {# nom du massage #}
-                    <h2>Massage Y</h2>
+                    <h2>Massage {{massage.name}}</h2>
                 </header>
 
                 {# Choix du masseur #}
-                <pre>
-                    {{ dump(massagists) }}
-                </pre>
                 <section class="mb-5">
                     <h3>Choisir un masseur</h3>
                     <div class="container-fluid">
@@ -31,10 +32,10 @@
                             <div class="col-12 mt-3">
                             {% for massagist in massagists %}
                                 <div class="card">
-                                    <button class="btn-card">
+                                    <button class="btn-card massagistBtn" data-id={{massagist.id}}>
                                         <div class="card-horizontal">
                                             <div class="img-square-wrapper">
-                                                <img class="massagist-photo-profile" src="{{absolute_url(asset('img/{{massagist.cover}}'))}}">
+                                                <img class="massagist-photo-profile" src="{{asset('images/'~massagist.cover)}}">
                                             </div>
                                             <div class="card-body">
                                                 <h4 class="card-title">{{massagist.name}}</h4>
@@ -51,13 +52,13 @@
                 </section>
 
                 {# Calendrier #}
-                <section>
+                <section class="calendar">
                     <h3>Choisir une date</h3>
                     {{calendar|raw}}
                 </section>
                 
                 {# Créneaux horaires #}
-                <section>
+                <section class="timeslots">
                     <h3>Choisir un créneau horaire</h3>
 
                     {# <h1 class="text-center">Book for Date: <?= date('Y/m/d', strtotime($date)) ?></h1> #}
@@ -70,8 +71,9 @@
                         <button class="btn btn-primary mb-4 book"data-timeslot="{{timeSlot}}">{{timeSlot}}</button>
                     {% endfor %}
                 </section>
+
                 {# Formulaire #}
-                <section>
+                <section class="form">
                     <h3>Veuillez renseigner les informations suivantes</h3>
                     {{ form_start(form) }}
                         <p>{{form_label(form.lastname)}}</p>
@@ -91,7 +93,7 @@
                         <p>{{form_errors(form.telephone)}}</p>
 
                         {# Récapitulatif #}
-                        <section class='summary'>
+                        <section class="summary">
                             <h3 class="mb-3">Résumé</h3>
                             <p>Massage: </p>
                             <p>Masseur: </p>
