--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,8 +17,6 @@
     --white-animation: #fdfffc;
   
  
-    --noir: #000000;
-    --blanc: rgba(255, 255, 255, 1);
     --grey-btn: rgb(231, 232, 236,0.4);
     --grey-border:rgb(215, 213, 213);
     --summary:rgba(24, 134, 197, 0.6);
@@ -61,7 +59,15 @@ body {
 .equipe-img {
   object-fit: fill;
   height: 30vh;
+}
 
+
+/* Reservation */
+/* on n'affiche pas les différentes parties de la réservation,
+elles s'afficheront au clic sur la section précédente
+ */
+ .calendar, .timeslots, .form, .summary{
+    display: none;
 }
 .summary{
     width: 400px;
@@ -78,7 +84,7 @@ body {
 }
 
 .massagist-photo-profile{
-    width: 200px;
+    width: 300px;
     height: auto;
 }
 .btn-card{
@@ -94,5 +100,6 @@ body {
 .btn-card:hover{
     background: var(--grey-btn);
     transition: 0.5s;
-
 }
+
+
