--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,7 +151,7 @@ p {
 .team {
     background-image: url(../images/69.jpg);
     background-size: cover; 
-
+}
 
 
 /* Reservation */
@@ -160,6 +160,7 @@ elles s'afficheront au clic sur la section précédente
  */
  .calendar, .timeslots, .form, .summary{
     display: none;
+ }
 .summary{
     width: 400px;
     padding: 15px;
