--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -103,18 +103,17 @@
                             <p>Date et horaire: </p>
                             <p>Prix: </p>
                         </section>
-                    {{ form_end(form)}}
-                </section>
-                
+                       
+                    {{ form_end(form)}} 
 
+                    <div>
+                        <a class="btn-design mb-5" href="{{ path('app_checkout', { id: massage.id }) }}">
+                            payer
+                        </a> 
+                    </div>                                 
+                </section>           
             </div>
-
         </div>
-
-
-
-
-
     </div>
 
     {{ include('component/_footer.html.twig') }}
