--- a/templates/massage/index.html.twig
+++ b/templates/massage/index.html.twig
@@ -12,7 +12,7 @@
 		<h2 class="section-title">Nos Massages</h2>
 	</div>
 
-	<div class="container hstack gap-5">
+	<div class="container hstack gap-5 reveal">
 	
 			<div class="row mx-auto">
 			{% for massage in massages %}
