--- a/templates/massagist/index.html.twig
+++ b/templates/massagist/index.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <section class="team">
+    <section class="team reveal">
         <div class="container">
             <h2 class="section-title">Nos massothérapeutes</h2>
         </div>
