--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -24,7 +24,7 @@
                     {#  nav-bar #}
                     <h1>Rendez-vous de Massage à WF3-Massage</h1>
                     {# nom du massage #}
-                    <h2>Massage {{massage.name}}</h2>
+                    <h2 class="massage" data-massage={{massage.id}}>Massage {{massage.name}}</h2>
                 </header>
 
                 {# Choix du masseur #}
@@ -35,7 +35,7 @@
                             <div class="col-12 mt-3">
                             {% for massagist in massagists %}
                                 <div class="card">
-                                    <button class="btn-card massagistBtn" data-id={{massagist.id}}>
+                                    <button class="btn-card ajax" data-massagist={{massagist.id}}>
                                         <div class="card-horizontal">
                                             <div class="img-square-wrapper">
                                                 <img class="massagist-photo-profile" src="{{asset('images/'~massagist.cover)}}">
@@ -48,7 +48,6 @@
                                     </button>
                                 </div>
                             {% endfor %}
-
                             </div>
                         </div>
                     </div>
@@ -69,9 +68,7 @@
 
                     <!-- affichage des times slots -->
                     {% for timeSlot in timeSlots|raw %}
-                        {# à ajouter = data-timeslot #}
-                        {# à ajouter = si tous le créneau est réservé on ne peut plus le réserver #}
-                        <button class="btn btn-primary mb-4 book"data-timeslot="{{timeSlot}}">{{timeSlot}}</button>
+                        <button class="btn btn-primary mb-4 ajax timeSlot" data-timeslot="{{timeSlot}}">{{timeSlot}}</button>
                     {% endfor %}
                 </section>
 
@@ -80,20 +77,22 @@
                     <h3>Veuillez renseigner les informations suivantes</h3>
                     {{ form_start(form) }}
                         <p>{{form_label(form.lastname)}}</p>
-                        <p>{{form_widget(form.lastname)}}</p>
+                        <p class="ajax">{{form_widget(form.lastname)}}</p>
                         <p>{{form_errors(form.lastname)}}</p>
 
                         <p>{{form_label(form.firstname)}}</p>
-                        <p>{{form_widget(form.firstname)}}</p>
+                        <p class="ajax" >{{form_widget(form.firstname)}}</p>
                         <p>{{form_errors(form.firstname)}}</p>
                         
                         <p>{{form_label(form.email)}}</p>
-                        <p>{{form_widget(form.email)}}</p>
+                        <p class="ajax" >{{form_widget(form.email)}}</p>
                         <p>{{form_errors(form.email)}}</p>
 
                         <p>{{form_label(form.telephone)}}</p>
-                        <p>{{form_widget(form.telephone)}}</p>
+                        <p class="ajax">{{form_widget(form.telephone)}}</p>
                         <p>{{form_errors(form.telephone)}}</p>
+                        
+                        <button class="btn btn-primary mt-3 next">Suivant</button>
 
                         {# Récapitulatif #}
                         <section class="summary">
@@ -102,6 +101,7 @@
                             <p>Masseur: </p>
                             <p>Date et horaire: </p>
                             <p>Prix: </p>
+                            <button class="btn btn-primary mt-3">Réserver</button>
                         </section>
                     {{ form_end(form)}}
                 </section>
