js effects, home css

--- a/templates/component/_intro.html.twig
+++ b/templates/component/_intro.html.twig
@@ -1,9 +1,9 @@
 
-<div class="intro">
+<div class="intro reveal">
     <div class="intro-text">
-        <h1>Find Yourself Here</h1>
-         {# <h1>Se Retrouver Ici</h1> #}
-        <button class="btn-design">book now</button>
+        <h1 >Find Yourself Here</h1>
+         {# <h1>Se Retrouver Ici  |  retrouvez-vous ici</h1> #}
+        <button class="btn-design">réserver</button>
     </div>
     <div class="intro-window">
     </div>
