--- a/templates/massagist/index.html.twig
+++ b/templates/massagist/index.html.twig
@@ -4,24 +4,25 @@
 
 {% block stylesheets %}
     {{parent()}}
-    <link rel="stylesheet" href="{{ asset('css/style.css') }}"> 
-{% endblock %}
-
+   {% endblock %}
 {% block body %}
     <section class="team reveal">
         <div class="container">
             <h2 class="section-title">Nos massothérapeutes</h2>
         </div>
 
-            <div class="container hstack gap-5">
+            <div class="container hstack">
 
-                <div class="row mx-auto py-5">
+                {# Massagist cards #}
+                <div class="row mx-auto">
                     {% for massagist in massagists %}
 
-                        <div class="col-12 col-lg-4 mx-auto ">
-                            <img src="{{ asset('images/'~ massagist.cover) }}" alt="{{ massagist.name ~ ' - image' }}" class="team-img ">
-                            <h3 class="pt-5 pb-2 title ">{{massagist.name}}</h3>
-                            <p  class="mt-4">{{massagist.description}}</p>                   
+                        <div class="col-12 col-lg-6  my-4 ">
+                            <div class="card p-3 ">
+                                <img src="{{ asset('images/'~ massagist.cover) }}" alt="{{ massagist.name ~ ' - image' }}" class="team-img ">
+                                <h3 class="pt-5 pb-2 title ">{{massagist.name}}</h3>
+                                <p  class="mt-4">{{massagist.description}}</p>                   
+                            </div>
                         </div>
                 
                     {% endfor %}
