--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@300;400;700&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root { 
     --title-font: 'Libre Baskerville', serif;
@@ -45,15 +43,16 @@ p {
 }
 
 .details {
-    font-size: 1.4rem;  
+    padding: 0 1rem;
+    font-size: 2rem;  
     color: var(--grey)  ;
 }
 
-/* JS effects */
+/* Delay effects HOME page */
 
 .reveal {
     opacity: 0;
-    transform: translateY(-50px);
+    transform: translateY(30px);
 }
 
 .reveal-visible {
@@ -63,6 +62,7 @@ p {
 }
 
 /* Navigation Bar */
+
 .navbar {
     height: 100px;
     background-color: var(--white);
@@ -79,6 +79,7 @@ p {
 }
 
 /* Intro */
+
 .intro {   
     background-image: url(../images/69.jpg);
     height: 70vh;
@@ -106,7 +107,6 @@ p {
     color: var(--text-color);
     background-color: var(--white);
     border: solid 0.2em  var(--text-color);
-    padding: 16px 80px;
     background-color: var(--white);
     font-family: var(--text-font);
     font-weight: 700;
@@ -114,7 +114,7 @@ p {
     text-transform: uppercase;
     transition-delay: 1.1s;   
     text-decoration: none;
-   }
+    }
 
 .btn-design:hover {
     color: var(--white);
@@ -127,6 +127,7 @@ p {
     top: 75%;
     left: 15rem;
     z-index: 1;
+    padding: 1rem 4.5rem;    
 }
 
 .intro-window {   
@@ -145,17 +146,35 @@ p {
 }
 
 /* About */
+
 .about {
     margin-top: 7rem;
     height: 70vh;
 }
 
 /* Massages / Services */
+
+.massages .card {
+    background-color: var(--white);
+    border: none;
+}
+
 .massages, .team {
     padding-bottom: 10rem;
 }
 
+.btn-massage {
+    padding: 0.5rem 0; 
+    width: 40%;    
+}
+
 /* Team */
+
+.team .card {
+    background-color: transparent;
+    border: none;
+}
+
 .team-img {
   object-fit: fill;
   height: 30vh;
@@ -166,14 +185,15 @@ p {
     background-size: cover; 
 }
 
-
 /* Reservation */
 /* on n'affiche pas les différentes parties de la réservation,
 elles s'afficheront au clic sur la section précédente
  */
+
  .calendar, .timeslots, .form, .summary{
     display: none;
  }
+
 .summary{
     width: 400px;
     padding: 15px;
@@ -208,8 +228,8 @@ elles s'afficheront au clic sur la section précédente
     transition: 0.5s;
 }
 
-
 /* footer */
+
 footer {
     background-color: var(--text-color);
 }
