--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,6 +22,9 @@
         'App\\Controller\\MassageController::index'
     )) }}
 
+    
+    {# {{ include('component/_modal.html.twig')}} #}
+
     {{ render(controller(
         'App\\Controller\\MassagistController::index'
     )) }}
