--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,12 @@
         {% endblock %}
 
         {% block javascripts %}
+            {# Bootstrap script #}
+            <!-- JavaScript Bundle with Popper -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+            {# LightBox script #}
+            {# <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> #}
+            {# Local JS  #}
             <script src="{{ asset('js/effects.js') }}" defer></script>
             {# {{ encore_entry_script_tags('app') }} #}
         {% endblock %}
