--- a/templates/massagist/index.html.twig
+++ b/templates/massagist/index.html.twig
@@ -1,10 +1,7 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
-{% block title %}Massagist{% endblock %}
+{% block title %}Massagist{% endblock %} #}
 
-{% block stylesheets %}
-    {{parent()}}
-   {% endblock %}
 {% block body %}
     <section class="team reveal">
         <div class="container">
