--- a/templates/massage/index.html.twig
+++ b/templates/massage/index.html.twig
@@ -1,9 +1,3 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Massage{% endblock %}
-{% block stylesheets %}
-    {{parent()}}   
-{% endblock %}
 {% block body %}
 
 <section class="massages reveal">
@@ -21,22 +15,28 @@
 						
 							<div class="card p-3" >
 								<img class="w-100 h-50" src="{{ asset('images/'~ massage.cover) }}" class="rounded mx-auto" alt="Thai massage">																					
-								<h3 class="pt-5 pb-2 title" data-massage-name="{{massage.name}}">
+								<h3 class="pt-5 pb-2 title getName">
 									{{ massage.name }}
 								</h3>
 																
 								<p class="py-4">
-									{{ massage.description|u.truncate(100, '...') }}
+									{{ massage.description|u.truncate(60, '') }}
+								{# modal test button #}
+								<button type="button" 
+									class="btnDetails" 
+									data-massage-cover="{{massage.cover}}" 
+									data-massage-name="{{massage.name}}" 
+									data-massage-description="{{massage.description}}" 
+									data-massage-price="{{massage.price}}"
+									data-massage-id="{{massage.id}}">
+								...
+								</button>	
 								</p>																	
 
 								<p class="pb-4"><span class="text-muted">60 min</span> <span class="details">{{massage.price}} €</span></p>
 								<a class="btn-design btn-massage text-center mb-5" href="{{ path('app_reservation', { id: massage.id }) }}">
 									réserver
-								</a>	
-
-								{# modal test #}
-								<button class="btnDetails">Open Modal</button>
-
+								</a>					 
 							</div>
 											
 					</div>
@@ -57,15 +57,27 @@
                 <div class="row">
 
                     <div class="col-4 ">
-                        <img class="modal-img" src="https://beautyinsider.sg/wp-content/uploads/2021/03/shutterstock_291214463.jpg" alt="Japanese massage">
+                        <img class="modal-img" id="showCover" src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_960_720.jpg" alt="Japanese massage">
                     </div>
 
                     <div class="col-8 ps-5">
-                        <h3 class="modal-title pb-3" id="showName">massage name</h3>
-                        <p class="modal-descr pb-4">
-                            Using a combination of kneading, tapping, pulling and pressure, practitioners target the legs, back, arms and neck. Japanese Massage aims to bring about relaxation and healing not just with the physical body, but also on an emotional and spiritual level.
+                        <h3 class="modal-title pb-3" id="showName">name</h3>
+                        <p class="modal-descr pb-4" id="showDescription">
+                          description
                         </p>
-                        <p><span class="modal-price">60 min 160€</span></p>
+
+						<div class="row">
+							<div class="col-6">
+								<p><span class="modal-price" id="showPrice">€</span></p>
+							</div>
+							<div class="col-6">
+								<a class="btn-design text-center btn-modal" id="showReserve" href="#">
+									réserver
+								</a>
+							</div>
+							
+						</div>
+                        	
                     </div>
 
                 </div>
@@ -73,6 +85,5 @@
             </div>   
     </div>   
 </div>
-
 </section>
 {% endblock %}
